Fri Sep 24 23:44:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_call), vm.c (invoke_block_from_c),
	  vm_insnhelper.c (vm_yield_with_cfunc): pass given block.
	  [ruby-core:32075]

	* vm_eval.c (rb_funcall_passing_block): new function to call
	  method with passing given block.

Fri Sep 24 15:50:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_to_i): fix rdoc: String#to_i raises an
	  exception when base is invalid. [ruby-core:31685]

Fri Sep 24 15:28:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_rindex): use rb_enc_prev_char instead of repeated str_nth.
	  patched by Michael Selig [ruby-core:32498]

Fri Sep 24 14:19:12 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/test_pty.rb: Same as 229281; existence of PTY class do not
	  guarantee a successful pty operation.

Thu Sep 23 23:09:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_get_cref0): cref is stacked only in normal
	  iseqs, so check if it is the case first.

Thu Sep 23 23:08:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config.sub: mingw64 should use x86_64.  [ruby-core:32514]

Thu Sep 23 21:40:40 2010  wanabe  <s.wanabe@gmail.com>

	* ext/socket/raddrinfo.c (init_addrinfo, inspect_sockaddr): suppress
	  warnings.  see [ruby-core:31932].

Thu Sep 23 19:27:57 2010  wanabe  <s.wanabe@gmail.com>

	* thread_win32.c (w32_wait_events, w32_close_handle): suppress warnings.
	  see [ruby-core:31932].

Thu Sep 23 18:54:39 2010  wanabe  <s.wanabe@gmail.com>

	* tool/config.sub: add mingw64.

	* win32/mkexports.rb (Exports::Mingw64): added.

	* win32/mkexports.rb (Exports::Mingw32): renamed from Exports::Mingw.

Thu Sep 23 09:01:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_cref_push): no outer cref is needed for proc
	  from method.  Bug #3786, Bug #3860, [ruby-core:32501]

Wed Sep 22 17:12:01 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
