@@ -1,3 +1,8 @@
+Sat Sep 25 01:34:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in (install-cross): target to install cross-compiling
+	  stuff.
+
 Fri Sep 24 23:44:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (sym_call), vm.c (invoke_block_from_c),
